--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             >Web<span class="logo-dark">Studio</span></a
           >
           <ul class="header-nav-list list">
-            <li><a class="link header-link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="link header-link header-nav-link current" href="./index.html">Studio</a>
+            </li>
             <li>
               <a class="link header-link" href="./portfolio.html">Portfolio</a>
             </li>
@@ -55,7 +57,7 @@
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
 
-          <button class="btn" type="button">Order Service</button>
+          <button class="btn" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
       <section class="section-studio">
@@ -523,5 +525,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" type="button" data-modal-close>
+          <svg class="modal-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-vector"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
