--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
           <ul class="header-nav-list list">
             <li><a class="link header-link" href="./index.html">Studio</a></li>
             <li>
-              <a class="link header-link" href="./portfolio.html">Portfolio</a>
+              <a class="link header-link header-nav-link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li><a class="link header-link" href="">Contacts</a></li>
           </ul>
