--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,11 @@
           <ul class="header-nav-list list">
             <li><a class="link header-link" href="./index.html">Studio</a></li>
             <li>
-              <a class="link header-link header-nav-link current" href="./portfolio.html">Portfolio</a>
+              <a
+                class="link header-link header-nav-link current"
+                href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li><a class="link header-link" href="">Contacts</a></li>
           </ul>
@@ -73,13 +77,22 @@
 
           <ul class="list card">
             <li class="card-item">
-              <a class="link card-link" href="">
-                <img
-                  src="./images/hw-02/img-1.jpg"
-                  width="360"
-                  height="300"
-                  alt="Banking App Interface Concept"
-                />
+              <a class="link card-link card-overlay" href="">
+                <div class="card-box">
+                  <img
+                    src="./images/hw-02/img-1.jpg"
+                    width="360"
+                    height="300"
+                    alt="Banking App Interface Concept"
+                  />
+                  <div class="overlay">
+                    <p class="card-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-wrapper">
                   <h2 class="uppertitle">Banking App Interface Concept</h2>
                   <p class="text">App</p>
@@ -87,13 +100,22 @@
               </a>
             </li>
             <li class="card-item">
-              <a class="link card-link" href="">
-                <img
-                  src="./images/hw-02/img-2.jpg"
-                  width="360"
-                  height="300"
-                  alt="Cashless Payment"
-                />
+              <a class="link card-link card-overlay" href="">
+                <div class="card-box">
+                  <img
+                    src="./images/hw-02/img-2.jpg"
+                    width="360"
+                    height="300"
+                    alt="Cashless Payment"
+                  />
+                  <div class="overlay">
+                    <p class="card-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-wrapper">
                   <h2 class="uppertitle">Cashless Payment</h2>
                   <p class="text">Marketing</p>
@@ -101,13 +123,22 @@
               </a>
             </li>
             <li class="card-item">
-              <a class="link card-link" href="">
-                <img
-                  src="./images/hw-02/img-3.jpg"
-                  width="360"
-                  height="300"
-                  alt="Meditation App"
-                />
+              <a class="link card-link card-overlay" href="">
+                <div class="card-box">
+                  <img
+                    src="./images/hw-02/img-3.jpg"
+                    width="360"
+                    height="300"
+                    alt="Meditation App"
+                  />
+                  <div class="overlay">
+                    <p class="card-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-wrapper">
                   <h2 class="uppertitle">Meditation App</h2>
                   <p class="text">App</p>
@@ -115,13 +146,22 @@
               </a>
             </li>
             <li class="card-item">
-              <a class="link card-link" href="">
-                <img
-                  src="./images/hw-02/img-4.jpg"
-                  width="360"
-                  height="300"
-                  alt="Taxi Service"
-                />
+              <a class="link card-link card-overlay" href="">
+                <div class="card-box">
+                  <img
+                    src="./images/hw-02/img-4.jpg"
+                    width="360"
+                    height="300"
+                    alt="Taxi Service"
+                  />
+                  <div class="overlay">
+                    <p class="card-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-wrapper">
                   <h2 class="uppertitle">Taxi Service</h2>
                   <p class="text">Marketing</p>
@@ -129,13 +169,22 @@
               </a>
             </li>
             <li class="card-item">
-              <a class="link card-link" href="">
-                <img
-                  src="./images/hw-02/img-5.jpg"
-                  width="360"
-                  height="300"
-                  alt="Screen Illustrations"
-                />
+              <a class="link card-link card-overlay" href="">
+                <div class="card-box">
+                  <img
+                    src="./images/hw-02/img-5.jpg"
+                    width="360"
+                    height="300"
+                    alt="Screen Illustrations"
+                  />
+                  <div class="overlay">
+                    <p class="card-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-wrapper">
                   <h2 class="uppertitle">Screen Illustrations</h2>
                   <p class="text">Design</p>
@@ -143,13 +192,22 @@
               </a>
             </li>
             <li class="card-item">
-              <a class="link card-link" href="">
-                <img
-                  src="./images/hw-02/img-6.jpg"
-                  width="360"
-                  height="300"
-                  alt="Online Courses"
-                />
+              <a class="link card-link card-overlay" href="">
+                <div class="card-box">
+                  <img
+                    src="./images/hw-02/img-6.jpg"
+                    width="360"
+                    height="300"
+                    alt="Online Courses"
+                  />
+                  <div class="overlay">
+                    <p class="card-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-wrapper">
                   <h2 class="uppertitle">Online Courses</h2>
                   <p class="text">Marketing</p>
@@ -157,13 +215,22 @@
               </a>
             </li>
             <li class="card-item">
-              <a class="link card-link" href="">
-                <img
-                  src="./images/hw-02/img-7.jpg"
-                  width="360"
-                  height="300"
-                  alt="Instagram Stories Concept"
-                />
+              <a class="link card-link card-overlay" href="">
+                <div class="card-box">
+                  <img
+                    src="./images/hw-02/img-7.jpg"
+                    width="360"
+                    height="300"
+                    alt="Instagram Stories Concept"
+                  />
+                  <div class="overlay">
+                    <p class="card-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-wrapper">
                   <h2 class="uppertitle">Instagram Stories Concept</h2>
                   <p class="text">Design</p>
@@ -171,13 +238,22 @@
               </a>
             </li>
             <li class="card-item">
-              <a class="link card-link" href="">
-                <img
-                  src="./images/hw-02/img-8.jpg"
-                  width="360"
-                  height="300"
-                  alt="Organic Food"
-                />
+              <a class="link card-link card-overlay" href="">
+                <div class="card-box">
+                  <img
+                    src="./images/hw-02/img-8.jpg"
+                    width="360"
+                    height="300"
+                    alt="Organic Food"
+                  />
+                  <div class="overlay">
+                    <p class="card-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-wrapper">
                   <h2 class="uppertitle">Organic Food</h2>
                   <p class="text">Web Site</p>
@@ -185,13 +261,22 @@
               </a>
             </li>
             <li class="card-item">
-              <a class="link card-link" href="">
-                <img
-                  src="./images/hw-02/img-9.jpg"
-                  width="360"
-                  height="300"
-                  alt="Fresh Coffee"
-                />
+              <a class="link card-link card-overlay" href="">
+                <div class="card-box">
+                  <img
+                    src="./images/hw-02/img-9.jpg"
+                    width="360"
+                    height="300"
+                    alt="Fresh Coffee"
+                  />
+                  <div class="overlay">
+                    <p class="card-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-wrapper">
                   <h2 class="uppertitle">Fresh Coffee</h2>
                   <p class="text">Web Site</p>
