--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
           >
           <ul class="header-nav-list list">
             <li>
-              <a class="link header-link header-nav-link current" href="./index.html">Studio</a>
+              <a
+                class="link header-link header-nav-link current"
+                href="./index.html"
+                >Studio</a
+              >
             </li>
             <li>
               <a class="link header-link" href="./portfolio.html">Portfolio</a>
@@ -57,7 +61,9 @@
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
 
-          <button class="btn" type="button" data-modal-open>Order Service</button>
+          <button class="btn" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <section class="section-studio">
