--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,8 @@
             >Web <span class="logo-dark">Studio</span></a
           >
           <ul class="header-nav-list list">
-            <li><a class="link header-link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="link header-link" href="./index.html">Studio</a></li>
             <li>
               <a
                 class="link header-link header-nav-link current"
@@ -36,7 +37,8 @@
                 >Portfolio</a
               >
             </li>
-            <li><a class="link header-link" href="">Contacts</a></li>
+            <li>
+              <a class="link header-link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="link">
@@ -303,7 +305,7 @@
           <ul class="list social-footer">
             <li class="social-item">
               <a
-                class="social-link link"
+                class="social-link-footer link"
                 href="https://instagram.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -316,7 +318,7 @@
 
             <li class="social-item">
               <a
-                class="social-link link"
+                class="social-link-footer link"
                 href="https://twitter.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -328,7 +330,7 @@
             </li>
             <li class="social-item">
               <a
-                class="social-link link"
+                class="social-link-footer link"
                 href="https://facebook.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -340,7 +342,7 @@
             </li>
             <li class="social-item">
               <a
-                class="social-link link"
+                class="social-link-footer link"
                 href="https://linkedin.com"
                 target="_blank"
                 rel="noopener noreferrer"
