--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
           <ul class="list social-footer">
             <li class="social-item">
               <a
-                class="social-link-footer"
+                class="social-link-footer link"
                 href="https://instagram.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -493,7 +493,7 @@
 
             <li class="social-item">
               <a
-                class="social-link-footer"
+                class="social-link-footer link"
                 href="https://twitter.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -505,7 +505,7 @@
             </li>
             <li class="social-item">
               <a
-                class="social-link-footer"
+                class="social-link-footer link"
                 href="https://facebook.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -517,7 +517,7 @@
             </li>
             <li class="social-item">
               <a
-                class="social-link-footer"
+                class="social-link-footer link"
                 href="https://linkedin.com"
                 target="_blank"
                 rel="noopener noreferrer"
