--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,8 @@
           >
           <ul class="header-nav-list list">
             <li>
-              <a class="link header-link" href="./index.html">Studio</a></li>
+              <a class="link header-link" href="./index.html">Studio</a>
+            </li>
             <li>
               <a
                 class="link header-link header-nav-link current"
@@ -38,7 +39,8 @@
               >
             </li>
             <li>
-              <a class="link header-link" href="">Contacts</a></li>
+              <a class="link header-link" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="link">
